--- a/src/config.json
+++ b/src/config.json
@@ -8,5 +8,5 @@
     "Account":5
   },
   "apiUrl": "https://localhost:4004/api",
-  "REACT_APP_GOOGLE_MAPS_API_KEY":"AIzaSyAt_x65lkmdSXWb6lDFO_9BpJyExi8sbGg"
+  "REACT_APP_GOOGLE_MAPS_API_KEY":""
 }
